Fixing the same layout issues already approved

--- a/blocks/feed-newsroom/feed-newsroom.css
+++ b/blocks/feed-newsroom/feed-newsroom.css
@@ -14,6 +14,10 @@ main .block.feed-newsroom {
     gap: 10vw;
 }
 
+.block.highlight.feed-newsroom > .others .title {
+    color: var(--link-color);
+}
+
 main .block.feed-newsroom > .others:first-child {
     flex-grow: 3;
 }
@@ -95,12 +99,12 @@ main .feed-newsroom-wrapper .load-more-container {
 
 @media (min-width: 62rem) {
 main .section.feed-newsroom-container.narrower > .section-container {
-        max-width: 80rem;
+        max-width: 75rem;
     }
     
 .block.highlight.feed-newsroom > .others picture {
-        width: 174px;
-        height: 98px;
+        width: 280px;
+        height: 150px;
         display: block;
         position: relative;
     }
