--- a/styles/styles.css
+++ b/styles/styles.css
@@ -940,6 +940,7 @@ main .section.bg-primary h6 {
 
 main .section.newsroom h4 {
   color: #89d1e1;
+  padding-top: 0;
 }
 
 main .section.bg-primary p {
